@@ -2,6 +2,7 @@
 
 require 'prawn-svg'
 require_relative 'prawn-svg/calculators/document_sizing'
+require_relative 'prawn-svg/elements/image'
 require_relative 'prawn-svg/loaders/data'
 require_relative 'prawn-svg/loaders/web'
 require_relative 'prawn-svg/url_loader'
